# Health-Rag-API

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  create_db.py  database.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  main.py  models.py
app/api/: deps.py  routes.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  rag.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: auth.py  rag.py  user.py
app/services/: auth_service.py  fda_service.py  rag_service.py
tests/: conftest.py
tests/unit/: test_auth.py
