[project]
name = "health-rag-api"
version = "0.1.0"
description = "Health RAG API Une application API moderne utilisant FastAPI, LangChain et OpenFDA pour montrer une architecture RAG (Retrieval-Augmented Generation)."
authors = [
    {name = "RANOELISON Dimbisoa Patrick",email = "ranoelisondimbisoapatrick@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.4"
uvicorn = "^0.40.0"
langchain = "^1.2.9"
langchain-openai = "^1.1.7"
langchain-community = "^0.4.1"
chromadb = "^1.4.1"
requests = "^2.32.5"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
langchain-classic = "^1.0.1"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"